style(TopNavBar): Align text correctly

--- a/src/app/modules/marketplace/components/modules-list/modules-list.component.scss
+++ b/src/app/modules/marketplace/components/modules-list/modules-list.component.scss
@@ -16,6 +16,7 @@
     & span {
         display: flex;
         align-items: center;
+        align-self: baseline;
     }
 }
 
